--- a/frontend-checker/package.json
+++ b/frontend-checker/package.json
@@ -13,14 +13,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "zustand": "^5.0.8"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
